--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode=production --config webpack.config.js && electron-builder build",
+	"release": "electron-builder build",
     "start": "concurrently \"webpack-dev-server --mode=development --hot --inline --config webpack.config.js\" \"wait-on http://localhost:8080/ && electron ./dist/main.js\""
   },
   "build": {
