--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "electron": "^7.1.1",
     "electron-builder": "^22.1.0",
     "file-loader": "^4.2.0",
+    "html-webpack-hot-plugin": "^1.2.2",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
     "standard": "^14.3.1",
