--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "css-loader": "^3.2.0",
     "electron": "^7.1.1",
     "electron-builder": "^22.1.0",
-    "file-loader": "^4.2.0",
     "html-webpack-hot-plugin": "^1.2.2",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
@@ -64,6 +63,7 @@
     "bootstrap": "^4.3.1",
     "concurrently": "^5.0.0",
     "electron-is-dev": "^1.1.0",
+    "electron-store": "^5.1.0",
     "guid-typescript": "^1.0.9",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
